--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 LABELS_COLUMN=P
 DESCRIPTION_COLUMN=K
-TYPE_COLUMN=M
+STORE_TYPE_COLUMN=M
 STORE_CLIENT_COLUMN=AF
 CLIENTS_COLUMN=L
 SOURCE_FILE=Metricas Maio.xlsx
