--- a/config
+++ b/config
@@ -1,18 +1,28 @@
-LABELS_COLUMN=P
-DESCRIPTION_COLUMN=K
-STORE_TYPE_COLUMN=M
-STORE_CLIENT_COLUMN=AF
+SOURCE_FILE=CIC BR - ISM - CIC BR - ISM (SAM)_metrics_2019-06-23.csv
+OUTPUT_FILE=Metricas Maio.2019.xlsx
+WORKSHEET=CIC BR - ISM - CIC BR - ISM (SA
+CREATED_BY_COLUMN=N
+TITLE_COLUMN=E 
+PRIMARY_LABELS_COLUMN=X
+OPENED_AT=O
 CLIENTS_COLUMN=L
-SOURCE_FILE=Metricas Maio.xlsx
-OUTPUT_FILE=new.xlsx
-WORKSHEET=Dados
-STORE_SEVERITY_COLUNM=AH
-
+STORE_CREATED_BY_COLUMN=A
+STORE_SHIFT=B
+STORE_CLIENT_COLUMN=C
+STORE_TITLE_COLUMN=D
+STORE_PRIMARY_LABELS_COLUMN=E
+STORE_TYPE_COLUMN=F
+STORE_SEVERITY_COLUNM=G
+STORE_OPENED_AT=H
+STORE_WEEK_DAY=I
+STORE_MONTH=J
 SEV_SUMMARY_LABELS=AI
 SEV_SUMMARY_VALUES=AJ
-
 SEV_SUMMARY_CLIENT_NAME=AK
 SEV_SUMMARY_CLIENT_SEV1=AL
 SEV_SUMMARY_CLIENT_SEV2=AM
 SEV_SUMMARY_CLIENT_SEV3=AN
 SEV_SUMMARY_CLIENT_SEV4=AO
+
+SOURCE_COLUMNS_LIST=B,C,J,I,A
+DESTINATION_COLUMNS_LIST=A,B,C,D,E
