--- a/config
+++ b/config
@@ -3,7 +3,7 @@ SOURCE_FILE=Metricas Maio.2019.xlsx
 OUTPUT_FILE=Metricas Maio.2019.xlsx
 WORKSHEET=Dados
 
-CREATED_BY_COLUMN=N
+CREATED_BY_COLUMN=A
 TITLE_COLUMN=E 
 PRIMARY_LABELS_COLUMN=X
 OPENED_AT=O
@@ -11,7 +11,7 @@ CLIENTS_COLUMN=L
 
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
-STORE_CLIENT_COLUMN=C
+STORE_CLIENT_COLUMN=D
 STORE_TITLE_COLUMN=D
 STORE_PRIMARY_LABELS_COLUMN=E
 STORE_TYPE_COLUMN=F
