--- a/config
+++ b/config
@@ -1,17 +1,18 @@
 # SOURCE_FILE=CIC BR - ISM - CIC BR - ISM (SAM)_metrics_2019-06-23.csv
-SOURCE_FILE=Metricas Maio.2019.xlsx
-OUTPUT_FILE=Metricas Maio.2019.xlsx
+SOURCE_FILE=Metricas Junho.2019.xlsx
+OUTPUT_FILE=Metricas Junho.2019.xlsx
 WORKSHEET=Dados
 
 CREATED_BY_COLUMN=A
-TITLE_COLUMN=E 
+TITLE_COLUMN=C
 PRIMARY_LABELS_COLUMN=X
 OPENED_AT=O
+LABELS_COLUMN=E
 CLIENTS_COLUMN=L
 
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
-STORE_CLIENT_COLUMN=D
+STORE_CLIENT_COLUMN=L
 STORE_TITLE_COLUMN=D
 STORE_PRIMARY_LABELS_COLUMN=E
 STORE_TYPE_COLUMN=F
