--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "exceljs": "^1.12.2",
+    "iconv-lite": "^0.5.0",
     "utf8": "^3.0.0"
   }
 }
