--- a/config
+++ b/config
@@ -8,12 +8,12 @@ TITLE_COLUMN=C
 PRIMARY_LABELS_COLUMN=X
 OPENED_AT=O
 LABELS_COLUMN=E
-CLIENTS_COLUMN=L
+CLIENTS_COLUMN=D
 
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
-STORE_CLIENT_COLUMN=L
-STORE_TITLE_COLUMN=D
+STORE_CLIENT_COLUMN=D
+STORE_TITLE_COLUMN=C
 STORE_PRIMARY_LABELS_COLUMN=E
 STORE_TYPE_COLUMN=F
 STORE_SEVERITY_COLUNM=G
