--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "botkit": "^0.6.21",
     "dotenv": "^8.0.0",
     "exceljs": "^1.12.2",
+    "express": "^4.17.1",
     "iconv-lite": "^0.5.0",
     "utf8": "^3.0.0"
   }
