--- a/config
+++ b/config
@@ -9,6 +9,8 @@ PRIMARY_LABELS_COLUMN=X
 CLOSED_AT=Q
 LABELS_COLUMN=E
 CLIENTS_COLUMN=D
+CREATED_AT=H
+CARD_ASSIGNEES=K
 
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
@@ -28,6 +30,3 @@ SEV_SUMMARY_CLIENT_SEV1=AL
 SEV_SUMMARY_CLIENT_SEV2=AM
 SEV_SUMMARY_CLIENT_SEV3=AN
 SEV_SUMMARY_CLIENT_SEV4=AO
-
-SOURCE_COLUMNS_LIST=N,E,X,Q
-DESTINATION_COLUMNS_LIST=A,C,E,H
