--- a/config
+++ b/config
@@ -12,6 +12,13 @@ CLIENTS_COLUMN=D
 CREATED_AT=H
 CARD_ASSIGNEES=K
 
+AREAS_ENVOLVIDAS=M
+SERVICE_LINE=N
+PROBLEMA_REPORTADO=O
+ANALISE_ACIONAMENTO=P
+LABELS_ALEATORIAS=Q
+ACAO_ISM=R
+
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
 STORE_CLIENT_COLUMN=D
