--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "iconv-lite": "^0.5.0",
     "utf8": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=8.0.0 <11.0.0"
   }
 }
