--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 # SOURCE_FILE=CIC BR - ISM - CIC BR - ISM (SAM)_metrics_2019-06-23.csv
-SOURCE_FILE=Metricas Julho.2019.xlsx
-OUTPUT_FILE=Metricas Julho.2019.xlsx
+SOURCE_FILE=Metricas.xlsx
+OUTPUT_FILE=Metricas.xlsx
 WORKSHEET=Dados
 
 CREATED_BY_COLUMN=A
