--- a/config
+++ b/config
@@ -12,12 +12,12 @@ CLIENTS_COLUMN=D
 CREATED_AT=H
 CARD_ASSIGNEES=K
 
-AREAS_ENVOLVIDAS=M
-SERVICE_LINE=N
-PROBLEMA_REPORTADO=O
-ANALISE_ACIONAMENTO=P
-LABELS_ALEATORIAS=Q
-ACAO_ISM=R
+AREAS_ENVOLVIDAS=L
+SERVICE_LINE=M
+PROBLEMA_REPORTADO=N
+ANALISE_ACIONAMENTO=O
+LABELS_ALEATORIAS=P
+ACAO_ISM=Q
 
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
