--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ node_modules/
 .env
 .1.env
 slack
+ge4DailyMajor/*.*
+ge4Dashboard/*.*
+ge4MonthEnd/*.*
+ge4NetworkStatus/*.*
+ge4UnixServerDetails/*.*
+config_grafana
