--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "exceljs": "^1.12.2",
     "express": "^4.17.1",
     "iconv-lite": "^0.5.0",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "jimp": "^0.6.4",
+    "puppeteer-firefox": "^0.5.0"
   },
   "engines": {
     "node": ">=8.0.0 <11.0.0"
