--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node bot_controller.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,9 +15,10 @@
     "exceljs": "^1.12.2",
     "express": "^4.17.1",
     "iconv-lite": "^0.5.0",
-    "utf8": "^3.0.0",
     "jimp": "^0.6.4",
-    "puppeteer-firefox": "^0.5.0"
+    "puppeteer": "^1.18.1",
+    "puppeteer-firefox": "^0.5.0",
+    "utf8": "^3.0.0"
   },
   "engines": {
     "node": ">=8.0.0 <11.0.0"
