--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "express": "^4.17.1",
     "iconv-lite": "^0.5.0",
     "jimp": "^0.6.4",
+    "node-cron": "^2.0.3",
     "puppeteer": "^1.18.1",
     "puppeteer-firefox": "^0.5.0",
+    "request": "^2.88.0",
     "utf8": "^3.0.0"
   },
   "engines": {
