script changed, new labels

--- a/config
+++ b/config
@@ -18,6 +18,7 @@ PROBLEMA_REPORTADO=N
 ANALISE_ACIONAMENTO=O
 LABELS_ALEATORIAS=P
 ACAO_ISM=Q
+MEIO_COMUNICACAO=R
 
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
