--- a/config
+++ b/config
@@ -19,6 +19,10 @@ ANALISE_ACIONAMENTO=O
 LABELS_ALEATORIAS=P
 ACAO_ISM=Q
 MEIO_COMUNICACAO=R
+SOLICITACOES=U
+QUEM_VOCE_ACIONOU=V
+QUEM_TE_ACIONOU=W
+LABELS_RELACIONADO_A_CHANGE=X
 
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
@@ -27,7 +31,7 @@ STORE_TITLE_COLUMN=C
 STORE_PRIMARY_LABELS_COLUMN=E
 STORE_TYPE_COLUMN=F
 STORE_SEVERITY_COLUNM=G
-STORE_CLOSED_AT=H
+STORE_CLOSED_AT=S
 STORE_WEEK_DAY=I
 STORE_MONTH=J
 
@@ -38,3 +42,5 @@ SEV_SUMMARY_CLIENT_SEV1=AL
 SEV_SUMMARY_CLIENT_SEV2=AM
 SEV_SUMMARY_CLIENT_SEV3=AN
 SEV_SUMMARY_CLIENT_SEV4=AO
+
+STORE_WORKED_HOURS=T
