--- a/config
+++ b/config
@@ -19,10 +19,10 @@ ANALISE_ACIONAMENTO=O
 LABELS_ALEATORIAS=P
 ACAO_ISM=Q
 MEIO_COMUNICACAO=R
-SOLICITACOES=U
-QUEM_VOCE_ACIONOU=V
-QUEM_TE_ACIONOU=W
-LABELS_RELACIONADO_A_CHANGE=X
+SOLICITACOES=V
+QUEM_VOCE_ACIONOU=W
+QUEM_TE_ACIONOU=X
+LABELS_RELACIONADO_A_CHANGE=Y
 
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
@@ -43,5 +43,8 @@ SEV_SUMMARY_CLIENT_SEV2=AM
 SEV_SUMMARY_CLIENT_SEV3=AN
 SEV_SUMMARY_CLIENT_SEV4=AO
 
-STORE_WORKED_HOURS=T
-STORE_QUANTIDADE_TICKETS=Y
+STORE_WORKED_HOURS=AA
+STORE_QUANTIDADE_TICKETS=Z
+
+OPERATIONAL_LEAD_TIME=U
+TOTAL_WAITING_TIME=T
