--- a/config
+++ b/config
@@ -34,6 +34,8 @@ STORE_SEVERITY_COLUNM=G
 STORE_CLOSED_AT=S
 STORE_WEEK_DAY=I
 STORE_MONTH=J
+STORE_DAY=AB
+STORE_YEAR=AC
 
 SEV_SUMMARY_LABELS=AI
 SEV_SUMMARY_VALUES=AJ
