nova coluna com hums(1)

--- a/config
+++ b/config
@@ -36,6 +36,7 @@ STORE_WEEK_DAY=I
 STORE_MONTH=J
 STORE_DAY=AB
 STORE_YEAR=AC
+QUANTIDADE_TICKETS_PER_USER=AD
 
 SEV_SUMMARY_LABELS=AI
 SEV_SUMMARY_VALUES=AJ
