fixing a bunch of things

--- a/config
+++ b/config
@@ -12,17 +12,19 @@ CLIENTS_COLUMN=D
 CREATED_AT=H
 CARD_ASSIGNEES=K
 
-AREAS_ENVOLVIDAS=L
+CATEGORIA=L
 SERVICE_LINE=M
 PROBLEMA_REPORTADO=N
 ANALISE_ACIONAMENTO=O
 LABELS_ALEATORIAS=P
 ACAO_ISM=Q
-MEIO_COMUNICACAO=R
+CANAL_ACIONAMENTO=R
 SOLICITACOES=V
 QUEM_VOCE_ACIONOU=W
 QUEM_TE_ACIONOU=X
-LABELS_RELACIONADO_A_CHANGE=Y
+LABELS_CHAMADOS_INDEVIDOS=Y
+
+
 
 STORE_CREATED_BY_COLUMN=A
 STORE_SHIFT=B
