ordem das colunas mudada

--- a/config
+++ b/config
@@ -36,9 +36,9 @@ STORE_SEVERITY_COLUNM=G
 STORE_CLOSED_AT=S
 STORE_WEEK_DAY=I
 STORE_MONTH=J
-STORE_DAY=AB
-STORE_YEAR=AC
-QUANTIDADE_TICKETS_PER_USER=AD
+STORE_DAY=O
+STORE_YEAR=Q
+QUANTIDADE_TICKETS_PER_USER=AB
 
 SEV_SUMMARY_LABELS=AI
 SEV_SUMMARY_VALUES=AJ
@@ -54,5 +54,5 @@ STORE_QUANTIDADE_TICKETS=Z
 OPERATIONAL_LEAD_TIME=U
 TOTAL_WAITING_TIME=T
 
-HORARIO_PICO=AE
+HORARIO_PICO=AC
 TRIBE=AF
