--- a/config
+++ b/config
@@ -56,3 +56,9 @@ TOTAL_WAITING_TIME=T
 
 HORARIO_PICO=AC
 TRIBE=AD
+
+FLOW_EFFICIENCY=AE
+HORARIO_INCIDENTE=AF
+SLA_TICKET=AG
+HORARIO_ACIONAMENTO=AH
+ISM_SOLICITOU=AI
