--- a/config
+++ b/config
@@ -20,9 +20,9 @@ LABELS_ALEATORIAS=P
 ACAO_ISM=Q
 CANAL_ACIONAMENTO=R
 SOLICITACOES=V
-QUEM_VOCE_ACIONOU=W
-QUEM_TE_ACIONOU=X
-LABELS_CHAMADOS_INDEVIDOS=Y
+QUEM_VOCE_ACIONOU=V
+QUEM_TE_ACIONOU=W
+LABELS_CHAMADOS_INDEVIDOS=X
 
 
 
@@ -38,7 +38,7 @@ STORE_WEEK_DAY=I
 STORE_MONTH=J
 STORE_DAY=O
 STORE_YEAR=Q
-QUANTIDADE_TICKETS_PER_USER=AB
+QUANTIDADE_TICKETS_PER_USER=AA
 
 SEV_SUMMARY_LABELS=AI
 SEV_SUMMARY_VALUES=AJ
@@ -48,23 +48,23 @@ SEV_SUMMARY_CLIENT_SEV2=AM
 SEV_SUMMARY_CLIENT_SEV3=AN
 SEV_SUMMARY_CLIENT_SEV4=AO
 
-STORE_WORKED_HOURS=AA
-STORE_QUANTIDADE_TICKETS=Z
+STORE_WORKED_HOURS=Z
+STORE_QUANTIDADE_TICKETS=Y
 
 OPERATIONAL_LEAD_TIME=U
 TOTAL_WAITING_TIME=T
 
-HORARIO_PICO=AC
-TRIBE=AD
+HORARIO_PICO=AB
+TRIBE=AC
 
-FLOW_EFFICIENCY=AE
-HORARIO_INCIDENTE=AF
-SLA_TICKET=AG
-HORARIO_ACIONAMENTO=AH
-ISM_SOLICITOU=AI
-SLA_TICKET_VENCIDO=AJ
-TEMPO_ATENDIMENTO=AK
-ANALISE_PRAZO_ACIONAMENTO=AL
-TEMPO_TOTAL_DIARIO_TRABALHADO=AM
-BASE_CALCULO_CLAIM=AN
-CLAIM=AO
+<!-- FLOW_EFFICIENCY=AD -->
+HORARIO_INCIDENTE=AE
+SLA_TICKET=AF
+HORARIO_ACIONAMENTO=AG
+ISM_SOLICITOU=AH
+SLA_TICKET_VENCIDO=AI
+TEMPO_ATENDIMENTO=AJ
+ANALISE_PRAZO_ACIONAMENTO=AK
+TEMPO_TOTAL_DIARIO_TRABALHADO=AL
+BASE_CALCULO_CLAIM=AM
+CLAIM=AN
