new config file

--- a/config
+++ b/config
@@ -58,13 +58,13 @@ HORARIO_PICO=AB
 TRIBE=AC
 
 <!-- FLOW_EFFICIENCY=AD -->
-HORARIO_INCIDENTE=AE
-SLA_TICKET=AF
-HORARIO_ACIONAMENTO=AG
-ISM_SOLICITOU=AH
-SLA_TICKET_VENCIDO=AI
-TEMPO_ATENDIMENTO=AJ
-ANALISE_PRAZO_ACIONAMENTO=AK
-TEMPO_TOTAL_DIARIO_TRABALHADO=AL
-BASE_CALCULO_CLAIM=AM
-CLAIM=AN
+HORARIO_INCIDENTE=AD
+SLA_TICKET=AE
+HORARIO_ACIONAMENTO=AF
+ISM_SOLICITOU=AG
+SLA_TICKET_VENCIDO=AH
+TEMPO_ATENDIMENTO=AI
+ANALISE_PRAZO_ACIONAMENTO=AJ
+TEMPO_TOTAL_DIARIO_TRABALHADO=AK
+BASE_CALCULO_CLAIM=AL
+CLAIM=AM
