--- a/config
+++ b/config
@@ -12,9 +12,9 @@ CLIENTS_COLUMN=D
 CREATED_AT=H
 CARD_ASSIGNEES=K
 
-CATEGORIA=L
-SERVICE_LINE=M
-PROBLEMA_REPORTADO=N
+CATEGORIA=Z
+SERVICE_LINE=AA
+PROBLEMA_REPORTADO=AB
 ANALISE_ACIONAMENTO=O
 LABELS_ALEATORIAS=P
 ACAO_ISM=Q
@@ -35,10 +35,10 @@ STORE_TYPE_COLUMN=F
 STORE_SEVERITY_COLUNM=G
 STORE_CLOSED_AT=S
 STORE_WEEK_DAY=I
-STORE_MONTH=J
-STORE_DAY=O
-STORE_YEAR=Q
-QUANTIDADE_TICKETS_PER_USER=AA
+STORE_MONTH=L
+STORE_DAY=M
+STORE_YEAR=N
+QUANTIDADE_TICKETS_PER_USER=O
 
 SEV_SUMMARY_LABELS=AI
 SEV_SUMMARY_VALUES=AJ
@@ -48,18 +48,18 @@ SEV_SUMMARY_CLIENT_SEV2=AM
 SEV_SUMMARY_CLIENT_SEV3=AN
 SEV_SUMMARY_CLIENT_SEV4=AO
 
-STORE_WORKED_HOURS=Z
+STORE_WORKED_HOURS=J
 STORE_QUANTIDADE_TICKETS=Y
 
 OPERATIONAL_LEAD_TIME=U
 TOTAL_WAITING_TIME=T
 
-HORARIO_PICO=AB
+HORARIO_PICO=Q
 TRIBE=AC
 
 <!-- FLOW_EFFICIENCY=AD -->
-HORARIO_INCIDENTE=AD
-SLA_TICKET=AE
+HORARIO_INCIDENTE=AE
+SLA_TICKET=AD
 HORARIO_ACIONAMENTO=AF
 ISM_SOLICITOU=AG
 SLA_TICKET_VENCIDO=AH
