mudanca nas colunas e preenchimento automatico

--- a/config
+++ b/config
@@ -58,8 +58,8 @@ HORARIO_PICO=Q
 TRIBE=AC
 
 <!-- FLOW_EFFICIENCY=AD -->
-HORARIO_INCIDENTE=AE
-SLA_TICKET=AD
+HORARIO_INCIDENTE=AD
+SLA_TICKET=AE
 HORARIO_ACIONAMENTO=AF
 ISM_SOLICITOU=AG
 SLA_TICKET_VENCIDO=AH
