--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "botkit": "^0.6.21",
+    "csvtojson": "^2.0.10",
     "dotenv": "^8.0.0",
     "exceljs": "^1.12.2",
     "express": "^4.17.1",
@@ -21,7 +22,8 @@
     "puppeteer": "^2.0.0",
     "puppeteer-firefox": "^0.5.0",
     "request": "^2.88.0",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "xlsx": "^0.16.5"
   },
   "engines": {
     "node": "12.0.0"
