--- a/config
+++ b/config
@@ -68,3 +68,6 @@ ANALISE_PRAZO_ACIONAMENTO=AJ
 TEMPO_TOTAL_DIARIO_TRABALHADO=AK
 BASE_CALCULO_CLAIM=AL
 CLAIM=AM
+HORARIO_ENCERRAMENTO=AO
+TEMPO_RESPOSTA=AP
+COMPLEXIDADE=AQ
